[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Beckschewe", email = "17655375+jan-be@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.79.0",
    "uvicorn[standard]>=0.18.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
